fixed the text wrapping in project card screenshot

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ main > h2 {
   display: flex;
   flex-direction: column;
   transition: transform 0.5s ease-in-out 0.1s;
+  min-width: 0;
 }
 
 .project > div:first-child {
@@ -147,6 +148,8 @@ main > h2 {
   align-items: center;
   font-size: 36px;
   color: white;
+
+  text-align: center;
 }
 .project > div:last-child {
   flex: 1;
